solc_ossfuzz_seed_corpus/test_solidity/test_b1a0174967f7bc9f217adc7f7d2dbc5ce6f34ebe02f09b6a7f9690cd03830e72_724a5af4e93df62eb8d0b9a372bb7dd97635970f_sol.sol
==== Source:  ====

==== Source: su0.sol ====
error er0();
type T0 is int216;
pragma solidity >= 0.0.0;
contract C0 {
  event ev0(T0  ep0);
  type T1 is uint240;
  mapping(bool => address)[]   s0;
  int232   s1;
  bytes5  public s2 = bytes5(0x0000000000);
  C0.T1   s3 = C0.T1.wrap(uint240(1766847064778384329583297500742918515827483896875618958121606201292619775));
  constructor(int232 i0)   {
    s1 ^= ((int232((((int232(2206548860957939121711707659862584773984781586524702171288950815387964) & int232(0)) % int232(3450873173395281893717377931138512726225554486085193277581262111899647)) / int232(2894158413154652608382086171705334749886375509317825591697877918767884))) % int232(0)) ** uint48(uint48(13196122806630)));
    unchecked {
      (bool l0, bytes memory l1) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"));
      {
      }
      (s3) = (C0.T1.wrap(uint240(0)));
    }
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5
  }
  function f0(bytes1 i0) private   
  {
    s0.pop();
  }
  modifier m0(function (bytes32) external   i0) 
  {
    if (false)
    {
      _;
    }
    _;
    do
    {
    }
    while ((bytes8(0x3a576885116cff51) > bytes8(0x0000000000000000)));
  }
  fallback() external virtual  
  {
    unchecked {
      {
        if (false)
        {
          emit ev0(T0.wrap(int216(52656145834278593348959013841835216159447547700274555627155488767)));
        }
        if (true)
        {
          revert er0();
        }
        else if ((int176(47890485652059026823698344598447161988085597568237567) < int176((int176(0) / ((int176(-24989087727071311359579274588527256199230114046526448) % int176(47890485652059026823698344598447161988085597568237567)) * int176(41199582962367313542272588546579516402738817621922349))))))
        {
          for(          bool l0 = false;
false;
)
          {
            if (true)
            {
              if ((!(false)))
              {
                s0.pop();
              }
              else if ((((int208(205688069665150755269371147819668813122841983204197482918576127) ^ int208(-3520600970850232281395186227240358092371217256746094641140873)) >= (int208(-80092867665937343372427326992703936343490610594695099055893984) & int208(205688069665150755269371147819668813122841983204197482918576127))) && false))
              {
                break;
                continue;
              }
            }
            else if ((bytes6(0xffffffffffff) <= bytes6(0xed32e2a431e7)))
            {
              function (address, uint80, C0.EN0) internal   returns (string memory) l1;
              s0.pop();
              continue;
            }
            break;
          }
        }
        else if (((uint80(1034359420302938267161492) != ((uint80(1208925819614629174706175) ** uint240(uint240(1766847064778384329583297500742918515827483896875618958121606201292619775))) + uint80(870512307126194245110685))) && true))
        {
          return;
        }
      }
      s0.push(s0[1]);
    }
  }
}
address constant cons0 = 0xcbF59C61f279A242A013333D4Ef2e91cDC8E4E61;
function f2(int64 i0,C0.EN0 i1)     returns(bytes2 o0)
{
  revert er0();
}
enum EN1 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30, M31,
  M32, M33, M34, M35, M36, M37, M38, M39

}
// ----
// Warning 3149: (su0.sol:2715-2843): The result type of the exponentiation operation is equal to the type of the first operand (uint80) ignoring the (larger) type of the second operand (uint240) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 8871: (su0.sol:2944-2951): Storage arrays with nested mappings do not support .push(<arg>).
